# octetos-mail

./: .gitignore  configure.ac
src/: Makefile.am  mail.cc  mail.hh  main.cc
